checkout/manifests/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e-commence-checkout-service
spec:
  selector:
    app: e-commence-checkout
  ports:
    - name: http
      port: 30005
      protocol: TCP
      targetPort: 30005
      nodePort: 30005
    - name: grpc
      port: 30006
      protocol: TCP
      targetPort: 30006
      nodePort: 30006
  type: NodePort
