checkout/manifests/kustomize/base/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-commence-checkout-http-ingress
  # namespace: tiktok
  # annotations:
    # cert-manager.io/cluster-issuer: letsencrypt
    # higress.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: higress
  rules:
    - host: "checkout.apikv.com"
    - http:
        paths:
          - path: /v1/checkout
            pathType: Prefix
            backend:
              service:
                name: prod-e-commence-checkout-service
                port:
                  number: 30005

  # tls:
  #   - hosts:
  #       - http.api-r.com
  #     secretName: api-r-com-http-secret
